Revert "build: add --verbose"
This reverts commit 8f85a2e0efea5ba1e2d04617ce5da3c8ad02c274.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "teamsfx",
   "scripts": {
-    "setup": "npm install --verbose && npm run build --verbose",
+    "setup": "npm install && npm run build",
     "setup-failpoint": "npm run setup && npx lerna run build-failpoint",
     "setup-metrics": "npm run setup && npx lerna run build-metrics",
     "bootstrap": "lerna bootstrap",
