--- a/packages/fx-core/package.json
+++ b/packages/fx-core/package.json
@@ -127,8 +127,9 @@
     "uuid": "^8.3.2",
     "validator": "^13.7.0",
     "xml2js": "^0.5.0",
-    "yaml": "^2.2.1",
-    "zip-a-folder": "0.0.12"
+    "yaml": "^2.2.2",
+    "zip-a-folder": "0.0.12",
+    "yaml-language-server": "1.7.0"
   },
   "devDependencies": {
     "@azure/storage-blob": "^12.5.0",
