--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -1364,6 +1364,7 @@
     "ttypescript": "^1.5.12",
     "typemoq": "^1.3.1",
     "typescript": "^4.2.4",
+    "umd-compat-loader": "^2.1.2",
     "url-loader": "^4.1.1",
     "uuid": "^8.3.2",
     "verdaccio": "^5.18.0",
