--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -35,10 +35,9 @@
 /packages/cli/tests/e2e/simpleauth @KennethBWSong @adashen @formulahendry
 /packages/cli/tests/e2e/sql @xzf0587 @adashen @blackchoey
 /packages/cli/tests/e2e/apim @XiaofuHuang @dooriya @kimizhu
-/packages/cli/tests/e2e/function @eriolchan @hund030 @IvanJobs
-/packages/cli/tests/e2e/frontend @hund030 @eriolchan @IvanJobs
-/packages/cli/tests/e2e/bot @IvanJobs @eriolchan @hund030
-/packages/cli/tests/e2e/scaffold @hund030 @eriolchan @IvanJobs
+/packages/cli/tests/e2e/frontend @hund030 @eriolchan @huimiu
+/packages/cli/tests/e2e/bot @JerryYangKai @eriolchan @Siglud @Yukun-dong
+/packages/cli/tests/e2e/scaffold @hund030 @eriolchan @huimiu
 /packages/cli/tests/e2e/multienv @a1exwang @dooriya @qinezh @xiaolang124 @kimizhu
 /packages/cli/tests/e2e/keyvault @adashen @formulahendry @xzf0587
 /packages/cli/tests/e2e/m365 @kimizhu @swatDong @kuojianlu
@@ -88,35 +87,35 @@
 /packages/fx-core/tests/component/generator/spfxGenerator.test.ts @HuihuiWu-Microsoft @nliu-ms @jayzhang
 /packages/fx-core/tests/component/generator/generator.test.ts @Yukun-dong @hund030 @JerryYangKai @eriolchan
 
-/packages/fx-core/src/component/feature/bot @IvanJobs @eriolchan @Yukun-dong @Siglud
-/packages/fx-core/src/component/code/botCode.ts @IvanJobs @eriolchan @Yukun-dong @Siglud
-/packages/fx-core/src/component/resource/botService @IvanJobs @eriolchan @Yukun-dong @Siglud
-/packages/fx-core/src/component/resource/azureAppService @IvanJobs @eriolchan @Yukun-dong @Siglud @hund030
+/packages/fx-core/src/component/feature/bot @JerryYangKai  @eriolchan @Yukun-dong @Siglud
+/packages/fx-core/src/component/code/botCode.ts @JerryYangKai @eriolchan @Yukun-dong @Siglud
+/packages/fx-core/src/component/resource/botService @JerryYangKai @eriolchan @Yukun-dong @Siglud
+/packages/fx-core/src/component/resource/azureAppService @JerryYangKai @eriolchan @Yukun-dong @Siglud @hund030
 
 /packages/fx-core/src/component/feature/tab.ts @eriolchan @hund030 @huimiu
 /packages/fx-core/src/component/code/tab @hund030 @eriolchan @huimiu
 /packages/fx-core/src/component/resource/azureStorage @hund030 @eriolchan @huimiu
 
-/packages/fx-core/src/component/feature/api @eriolchan @hund030 @IvanJobs
-/packages/fx-core/src/component/code/api @eriolchan @hund030 @IvanJobs
+/packages/fx-core/src/component/feature/api @eriolchan @hund030 @huimiu
+/packages/fx-core/src/component/code/api @eriolchan @hund030 @huimiu
 /packages/fx-core/src/component/code/api/depsChecker @a1exwang @kimizhu @qinezh
 
 /packages/fx-core/src/component/developerPortalScaffoldUtils.ts @yuqizhou77 @nliu-ms @jayzhang
 /packages/fx-core/tests/component/feature/developerPortalScaffoldUtils.test.ts @yuqizhou77 @nliu-ms @jayzhang
 
-/templates/tab @hund030 @eriolchan @IvanJobs @huimiu
-/templates/function-base @hund030 @eriolchan @IvanJobs
-/templates/function-triggers @hund030 @eriolchan @IvanJobs
-/templates/blazor-base @JerryYangKai @eriolchan @IvanJobs
-/templates/bot @IvanJobs @eriolchan @Siglud @Yukun-dong
-/templates/bot-msgext @IvanJobs @eriolchan @Siglud @Yukun-dong
-/templates/msgext @IvanJobs @eriolchan @Siglud @Yukun-dong
+/templates/tab @hund030 @eriolchan @huimiu
+/templates/function-base @hund030 @eriolchan @huimiu
+/templates/function-triggers @hund030 @eriolchan @huimiu
+/templates/blazor-base @JerryYangKai @eriolchan @hund030 @huimiu
+/templates/bot @JerryYangKai @eriolchan @Siglud @Yukun-dong
+/templates/bot-msgext @JerryYangKai @eriolchan @Siglud @Yukun-dong
+/templates/msgext @JerryYangKai @eriolchan @Siglud @Yukun-dong
 /templates/tab/js/m365 @kuojianlu @swatDong @kimizhu
 /templates/tab/ts/m365 @kuojianlu @swatDong @kimizhu
 /templates/bot/js/m365 @kuojianlu @swatDong @kimizhu
 /templates/bot/ts/m365 @kuojianlu @swatDong @kimizhu
-/packages/fx-core/src/common/template-utils @hund030 @IvanJobs @eriolchan
-/packages/fx-core/tests/common/templateFetch.test.ts @hund030 @IvanJobs @eriolchan
+/packages/fx-core/src/common/template-utils @hund030 @huimiu @eriolchan
+/packages/fx-core/tests/common/templateFetch.test.ts @hund030 @huimiu @eriolchan
 
 /templates/scenarios/js/command-and-response @kimizhu @dooriya @swatDong
 /templates/scenarios/js/notification-http-timer-trigger @kimizhu @dooriya @swatDong
@@ -172,7 +171,7 @@
 /packages/dotnet-sdk/src/TeamsFx/Conversation @swatDong @dooriya @kimizhu
 /packages/dotnet-sdk/src/TeamsFx.Test/Conversation @swatDong @dooriya @kimizhu
 
-/.github/workflows/cd.yml @adashen @LongOddCode @IvanJobs @qinezh @wenytang-ms
+/.github/workflows/cd.yml @adashen @LongOddCode @Siglud @qinezh @wenytang-ms
 /.github/CODEOWNERS @adashen @eriolchan @kimizhu @MSFT-yiz @zhenjiao-ms
 /packages/server @chagong @Alive-Fish @jayzhang
 
@@ -204,5 +203,5 @@
 
 /packages/fx-core/src/core/middleware/utils/debug @swatDong @XiaofuHuang @kuojianlu @kimizhu
 
-/packages/fx-core/src/component/driver/deploy/azure @siglud @Yukun-dong @hund030 @JerryYangKai @IvanJobs @eriolchan
-/packages/fx-core/src/component/driver/script @siglud @Yukun-dong @hund030 @JerryYangKai @IvanJobs @eriolchan
+/packages/fx-core/src/component/driver/deploy/azure @Siglud @Yukun-dong @JerryYangKai @eriolchan
+/packages/fx-core/src/component/driver/script @Siglud @Yukun-dong @JerryYangKai @eriolchan
