--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -112,7 +112,7 @@
     "@azure/arm-resources": "5.0.1",
     "@azure/arm-sql": "^9.0.0",
     "@azure/arm-subscriptions": "^5.0.0",
-    "@azure/core-http": "^3.0.1",
+    "@azure/core-auth": "^1.4.0",
     "@azure/identity": "^3.1.3",
     "@microsoft/metrics-ts": "0.0.3",
     "@microsoft/teamsfx-api": "^0.22.1",
