--- a/packages/fx-core/package.json
+++ b/packages/fx-core/package.json
@@ -70,6 +70,7 @@
     "@azure/arm-botservice": "^2.0.0",
     "@azure/arm-resources": "~5.0.1",
     "@azure/arm-sql": "^9.0.0",
+    "@azure/core-auth": "^1.4.0",
     "@azure/arm-storage": "^17.2.1",
     "@azure/arm-subscriptions": "^5.0.0",
     "@azure/identity": "^3.1.3",
