--- a/packages/fx-core/templates/core/v3Migration/js.ts.app.local.yml
+++ b/packages/fx-core/templates/core/v3Migration/js.ts.app.local.yml
@@ -7,14 +7,27 @@ version: 1.0.0
 provision:
   {{#registerApp}}
   {{#if aad}}
-  - uses: aadApp/create # Creates a new Azure Active Directory (AAD) app to authenticate users if the environment variable that stores clientId is empty
+  # Creates a new Azure Active Directory (AAD) app to authenticate users if
+  # the environment variable that stores clientId is empty
+  - uses: aadApp/create
     with:
-      name: $\{{CONFIG__MANIFEST__APPNAME__SHORT}}-aad # Note: when you run aadApp/update, the AAD app name will be updated based on the definition in manifest. If you don't want to change the name, make sure the name in AAD manifest is the same with the name defined here.
-      generateClientSecret: true # If the value is false, the action will not generate client secret for you
-      signInAudience: "AzureADMyOrg" # Authenticate users with a Microsoft work or school account in your organization's Azure AD tenant (for example, single tenant).
-    writeToEnvironmentFile: # Write the information of created resources into environment file for the specified environment variable(s).
+      # Note: when you run aadApp/update, the AAD app name will be updated
+      # based on the definition in manifest. If you don't want to change the
+      # name, make sure the name in AAD manifest is the same with the name
+      # defined here.
+      name: $\{{CONFIG__MANIFEST__APPNAME__SHORT}}-aad
+      # If the value is false, the action will not generate client secret for you
+      generateClientSecret: true
+      # Authenticate users with a Microsoft work or school account in your
+      # organization's Azure AD tenant (for example, single tenant).
+      signInAudience: "AzureADMyOrg"
+    # Write the information of created resources into environment file for the
+    # specified environment variable(s).
+    writeToEnvironmentFile:
       clientId: AAD_APP_CLIENT_ID
-      clientSecret: SECRET_AAD_APP_CLIENT_SECRET # Environment variable that starts with `SECRET_` will be stored to the .env.{envName}.user environment file
+      # Environment variable that starts with `SECRET_` will be stored to the
+      # .env.{envName}.user environment file
+      clientSecret: SECRET_AAD_APP_CLIENT_SECRET
       objectId: AAD_APP_OBJECT_ID
       tenantId: AAD_APP_TENANT_ID
       authority: AAD_APP_OAUTH_AUTHORITY
@@ -22,21 +35,28 @@ provision:
 
   {{/if}}
   {{#if teamsApp}}
-  - uses: teamsApp/create # Creates a Teams app
+  # Creates a Teams app
+  - uses: teamsApp/create
     with:
-      name: $\{{CONFIG__MANIFEST__APPNAME__SHORT}} # Teams app name
+      # Teams app name
+      name: $\{{CONFIG__MANIFEST__APPNAME__SHORT}}
+    # Write the information of created resources into environment file for
+    # the specified environment variable(s).
     writeToEnvironmentFile:
-      # Write the information of created resources into environment file for the specified environment variable(s).
       teamsAppId: TEAMS_APP_ID
   {{/if}}
 
   {{/registerApp}}
   {{#bot}}
-  - uses: botAadApp/create # Creates a new AAD app for bot if BOT_ID environment variable is empty
+  # Create or reuse an existing Azure Active Directory application for bot.
+  - uses: botAadApp/create
     with:
+      # The Azure Active Directory application's display name
       name: $\{{CONFIG__MANIFEST__APPNAME__SHORT}}-bot
     writeToEnvironmentFile:
+      # The Azure Active Directory application's client id created for bot.
       botId: BOT_ID
+      # The Azure Active Directory application's client secret created for bot.
       botPassword: SECRET_BOT_PASSWORD
 
   # Create or update the bot registration on dev.botframework.com
@@ -64,31 +84,49 @@ provision:
 
   {{/tab}}
   {{#if aad}}
-  - uses: aadApp/update # Apply the AAD manifest to an existing AAD app. Will use the object id in manifest file to determine which AAD app to update.
+  # Apply the AAD manifest to an existing AAD app. Will use the object id in
+  # manifest file to determine which AAD app to update.
+  - uses: aadApp/update
     with:
-      manifestPath: ./aad.manifest.json # Relative path to this file. Environment variables in manifest will be replaced before apply to AAD app
+      # Relative path to this file. Environment variables in manifest will
+      # be replaced before apply to AAD app
+      manifestPath: ./aad.manifest.json
       outputFilePath : ./build/aad.manifest.$\{{TEAMSFX_ENV}}.json
 
   {{/if}}
   {{#teamsApp}}
   {{#if appPackagePath}}
-  - uses: teamsApp/update # # Apply the Teams app manifest to an existing Teams app. Will use the app id in manifest file to determine which Teams app to update.
+  - uses: teamsApp/update
     with:
-      appPackagePath: {{appPackagePath}} # Relative path to this file. This is the path for built zip file.
+      appPackagePath: {{appPackagePath}}
   {{else}}
-  - uses: teamsApp/validateManifest # Validate using manifest schema
+  # Validate using manifest schema
+  - uses: teamsApp/validateManifest
     with:
-      manifestPath: ./appPackage/manifest.json # Path to manifest template
+      # Path to manifest template
+      manifestPath: ./appPackage/manifest.json
 
-  - uses: teamsApp/zipAppPackage # Build Teams app package with latest env value
+  # Build Teams app package with latest env value
+  - uses: teamsApp/zipAppPackage
     with:
-      manifestPath: ./appPackage/manifest.json # Path to manifest template
+      # Path to manifest template
+      manifestPath: ./appPackage/manifest.json
       outputZipPath: ./build/appPackage/appPackage.$\{{TEAMSFX_ENV}}.zip
       outputJsonPath: ./build/appPackage/manifest.$\{{TEAMSFX_ENV}}.json
 
-  - uses: teamsApp/update # Apply the Teams app manifest to an existing Teams app in Teams Developer Portal. Will use the app id in manifest file to determine which Teams app to update.
+  # Validate app package using validation rules
+  - uses: teamsApp/validateAppPackage
     with:
-      appPackagePath: ./build/appPackage/appPackage.$\{{TEAMSFX_ENV}}.zip # Relative path to this file. This is the path for built zip file.
+      # Relative path to this file. This is the path for built zip file.
+      appPackagePath: ./build/appPackage/appPackage.$\{{TEAMSFX_ENV}}.zip
+
+  # Apply the Teams app manifest to an existing Teams app in
+  # Teams Developer Portal.
+  # Will use the app id in manifest file to determine which Teams app to update.
+  - uses: teamsApp/update
+    with:
+      # Relative path to this file. This is the path for built zip file.
+      appPackagePath: ./build/appPackage/appPackage.$\{{TEAMSFX_ENV}}.zip
   {{/if}}
 
   {{/teamsApp}}
