--- a/packages/fx-core/tests/core/middleware/testAssets/v3Migration/debug/transparent-tab-bot-func/expected/app.local.yml
+++ b/packages/fx-core/tests/core/middleware/testAssets/v3Migration/debug/transparent-tab-bot-func/expected/app.local.yml
@@ -1,42 +1,18 @@
-# yaml-language-server: $schema=https://aka.ms/teams-toolkit/1.0.0/yaml.schema.json
-# Visit https://aka.ms/teamsfx-v5.0-guide for details on this file
-# Visit https://aka.ms/teamsfx-actions for details on actions
-version: 1.0.0
+{{header}}
 
 provision:
-  - uses: aadApp/create # Creates a new Azure Active Directory (AAD) app to authenticate users if the environment variable that stores clientId is empty
-    with:
-      name: ${{CONFIG__MANIFEST__APPNAME__SHORT}}-aad # Note: when you run aadApp/update, the AAD app name will be updated based on the definition in manifest. If you don't want to change the name, make sure the name in AAD manifest is the same with the name defined here.
-      generateClientSecret: true # If the value is false, the action will not generate client secret for you
-      signInAudience: "AzureADMyOrg" # Authenticate users with a Microsoft work or school account in your organization's Azure AD tenant (for example, single tenant).
-    writeToEnvironmentFile: # Write the information of created resources into environment file for the specified environment variable(s).
-      clientId: AAD_APP_CLIENT_ID
-      clientSecret: SECRET_AAD_APP_CLIENT_SECRET # Environment variable that starts with `SECRET_` will be stored to the .env.{envName}.user environment file
-      objectId: AAD_APP_OBJECT_ID
-      tenantId: AAD_APP_TENANT_ID
-      authority: AAD_APP_OAUTH_AUTHORITY
-      authorityHost: AAD_APP_OAUTH_AUTHORITY_HOST
+{{aadAppCreate}}
 
-  - uses: teamsApp/create # Creates a Teams app
-    with:
-      name: ${{CONFIG__MANIFEST__APPNAME__SHORT}} # Teams app name
-    writeToEnvironmentFile:
-      # Write the information of created resources into environment file for the specified environment variable(s).
-      teamsAppId: TEAMS_APP_ID
+{{teamsAppCreate}}
 
-  - uses: botAadApp/create # Creates a new AAD app for bot if BOT_ID environment variable is empty
-    with:
-      name: ${{CONFIG__MANIFEST__APPNAME__SHORT}}-bot
-    writeToEnvironmentFile:
-      botId: BOT_ID
-      botPassword: SECRET_BOT_PASSWORD
+{{localBotAadAppCreate}}
 
   # Create or update the bot registration on dev.botframework.com
   - uses: botFramework/create
     with:
-      botId: ${{BOT_ID}}
-      name: ${{CONFIG__MANIFEST__APPNAME__SHORT}}-bot
-      messagingEndpoint: ${{PROVISIONOUTPUT__AZUREFUNCTIONBOTOUTPUT__SITEENDPOINT}}/api/messages
+      botId: $\{{BOT_ID}}
+      name: $\{{CONFIG__MANIFEST__APPNAME__SHORT}}-bot
+      messagingEndpoint: $\{{PROVISIONOUTPUT__AZUREFUNCTIONBOTOUTPUT__SITEENDPOINT}}/api/messages
       description: ""
       channels:
         - name: msteams
@@ -48,24 +24,9 @@ provision:
         echo "::set-teamsfx-env PROVISIONOUTPUT__AZURESTORAGETABOUTPUT__ENDPOINT=https://localhost:53000";
         echo "::set-teamsfx-env PROVISIONOUTPUT__AZURESTORAGETABOUTPUT__INDEXPATH=/index.html#";
 
-  - uses: aadApp/update # Apply the AAD manifest to an existing AAD app. Will use the object id in manifest file to determine which AAD app to update.
-    with:
-      manifestPath: ./aad.manifest.json # Relative path to this file. Environment variables in manifest will be replaced before apply to AAD app
-      outputFilePath : ./build/aad.manifest.${{TEAMSFX_ENV}}.json
+{{aadAppUpdate}}
 
-  - uses: teamsApp/validateManifest # Validate using manifest schema
-    with:
-      manifestPath: ./appPackage/manifest.json # Path to manifest template
-
-  - uses: teamsApp/zipAppPackage # Build Teams app package with latest env value
-    with:
-      manifestPath: ./appPackage/manifest.json # Path to manifest template
-      outputZipPath: ./build/appPackage/appPackage.${{TEAMSFX_ENV}}.zip
-      outputJsonPath: ./build/appPackage/manifest.${{TEAMSFX_ENV}}.json
-
-  - uses: teamsApp/update # Apply the Teams app manifest to an existing Teams app in Teams Developer Portal. Will use the app id in manifest file to determine which Teams app to update.
-    with:
-      appPackagePath: ./build/appPackage/appPackage.${{TEAMSFX_ENV}}.zip # Relative path to this file. This is the path for built zip file.
+{{localTeamsAppUpdate}}
 
 deploy:
   # Install development tool(s)
@@ -93,24 +54,24 @@ deploy:
         BROWSER: none
         HTTPS: true
         PORT: 53000
-        SSL_CRT_FILE: ${{SSL_CRT_FILE}}
-        SSL_KEY_FILE: ${{SSL_KEY_FILE}}
+        SSL_CRT_FILE: $\{{SSL_CRT_FILE}}
+        SSL_KEY_FILE: $\{{SSL_KEY_FILE}}
 
   # Generate runtime environment variables
   - uses: file/createOrUpdateEnvironmentFile
     with:
       target: ./bot/.env.teamsfx.local
       envs:
-        BOT_ID: ${{BOT_ID}}
-        BOT_PASSWORD: ${{SECRET_BOT_PASSWORD}}
+        BOT_ID: $\{{BOT_ID}}
+        BOT_PASSWORD: $\{{SECRET_BOT_PASSWORD}}
 
   # Generate runtime environment variables
   - uses: file/createOrUpdateEnvironmentFile
     with:
       target: ./tabs/.env.teamsfx.local
       envs:
-        REACT_APP_START_LOGIN_PAGE_URL: ${{PROVISIONOUTPUT__AZURESTORAGETABOUTPUT__ENDPOINT}}/auth-start.html
-        REACT_APP_CLIENT_ID: ${{AAD_APP_CLIENT_ID}}
+        REACT_APP_START_LOGIN_PAGE_URL: $\{{PROVISIONOUTPUT__AZURESTORAGETABOUTPUT__ENDPOINT}}/auth-start.html
+        REACT_APP_CLIENT_ID: $\{{AAD_APP_CLIENT_ID}}
         REACT_APP_FUNC_ENDPOINT: http://localhost:7071
         REACT_APP_FUNC_NAME: getUserProfile
 
@@ -119,12 +80,12 @@ deploy:
     with:
       target: ./bot/.env.teamsfx.local
       envs:
-        M365_CLIENT_ID: ${{AAD_APP_CLIENT_ID}}
-        M365_CLIENT_SECRET: ${{SECRET_AAD_APP_CLIENT_SECRET}}
-        M365_TENANT_ID: ${{AAD_APP_TENANT_ID}}
-        M365_AUTHORITY_HOST: ${{AAD_APP_OAUTH_AUTHORITY_HOST}}
-        INITIATE_LOGIN_ENDPOINT: ${{PROVISIONOUTPUT__AZUREFUNCTIONBOTOUTPUT__SITEENDPOINT}}/auth-start.html
-        M365_APPLICATION_ID_URI: api://${{PROVISIONOUTPUT__AZURESTORAGETABOUTPUT__ENDPOINT}}/botid-${{BOT_ID}}
+        M365_CLIENT_ID: $\{{AAD_APP_CLIENT_ID}}
+        M365_CLIENT_SECRET: $\{{SECRET_AAD_APP_CLIENT_SECRET}}
+        M365_TENANT_ID: $\{{AAD_APP_TENANT_ID}}
+        M365_AUTHORITY_HOST: $\{{AAD_APP_OAUTH_AUTHORITY_HOST}}
+        INITIATE_LOGIN_ENDPOINT: $\{{PROVISIONOUTPUT__AZUREFUNCTIONBOTOUTPUT__SITEENDPOINT}}/auth-start.html
+        M365_APPLICATION_ID_URI: api://$\{{PROVISIONOUTPUT__AZURESTORAGETABOUTPUT__ENDPOINT}}/botid-$\{{BOT_ID}}
         API_ENDPOINT: http://localhost:7071
 
   # Generate runtime environment variables
@@ -132,10 +93,10 @@ deploy:
     with:
       target: ./api/.env.teamsfx.local
       envs:
-        M365_CLIENT_ID: ${{AAD_APP_CLIENT_ID}}
-        M365_CLIENT_SECRET: ${{SECRET_AAD_APP_CLIENT_SECRET}}
-        M365_TENANT_ID: ${{AAD_APP_TENANT_ID}}
-        M365_AUTHORITY_HOST: ${{AAD_APP_OAUTH_AUTHORITY_HOST}}
+        M365_CLIENT_ID: $\{{AAD_APP_CLIENT_ID}}
+        M365_CLIENT_SECRET: $\{{SECRET_AAD_APP_CLIENT_SECRET}}
+        M365_TENANT_ID: $\{{AAD_APP_TENANT_ID}}
+        M365_AUTHORITY_HOST: $\{{AAD_APP_OAUTH_AUTHORITY_HOST}}
         ALLOWED_APP_IDS: 1fec8e78-bce4-4aaf-ab1b-5451cc387264;5e3ce6c0-2b1f-4285-8d4b-75ee78787346;0ec893e0-5785-4de6-99da-4ed124e5296c;4345a7b9-9a63-4910-a426-35363201d503;4765445b-32c6-49b0-83e6-1d93765276ca;d3590ed6-52b3-4102-aeff-aad2292ab01c;00000002-0000-0ff1-ce00-000000000000;bc59ab01-8403-45c6-8796-ac3ef710b3e3
 
   # Run npm command
