style(template): remove trailing comma from launch.json

--- a/templates/scenarios/js/non-sso-tab/.vscode/launch.json
+++ b/templates/scenarios/js/non-sso-tab/.vscode/launch.json
@@ -169,7 +169,7 @@
             "name": "Debug in Teams (Edge)",
             "configurations": [
                 "Attach to Frontend in Teams (Edge)",
-                "Attach to Local Service",
+                "Attach to Local Service"
             ],
             "preLaunchTask": "Start Teams App Locally",
             "presentation": {
@@ -182,7 +182,7 @@
             "name": "Debug in Teams (Chrome)",
             "configurations": [
                 "Attach to Frontend in Teams (Chrome)",
-                "Attach to Local Service",
+                "Attach to Local Service"
             ],
             "preLaunchTask": "Start Teams App Locally",
             "presentation": {
@@ -195,7 +195,7 @@
             "name": "Debug in Outlook (Edge)",
             "configurations": [
                 "Attach to Frontend in Outlook (Edge)",
-                "Attach to Local Service",
+                "Attach to Local Service"
             ],
             "preLaunchTask": "Start Teams App Locally",
             "presentation": {
@@ -208,7 +208,7 @@
             "name": "Debug in Outlook (Chrome)",
             "configurations": [
                 "Attach to Frontend in Outlook (Chrome)",
-                "Attach to Local Service",
+                "Attach to Local Service"
             ],
             "preLaunchTask": "Start Teams App Locally",
             "presentation": {
@@ -221,7 +221,7 @@
             "name": "Debug in the Microsoft 365 app (Edge)",
             "configurations": [
                 "Attach to Frontend in the Microsoft 365 app (Edge)",
-                "Attach to Local Service",
+                "Attach to Local Service"
             ],
             "preLaunchTask": "Start Teams App Locally",
             "presentation": {
@@ -234,7 +234,7 @@
             "name": "Debug in the Microsoft 365 app (Chrome)",
             "configurations": [
                 "Attach to Frontend in the Microsoft 365 app (Chrome)",
-                "Attach to Local Service",
+                "Attach to Local Service"
             ],
             "preLaunchTask": "Start Teams App Locally",
             "presentation": {
