--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@microsoft/teamsfx-server",
-  "version": "1.2.5-rc-hotfix.0",
+  "version": "1.2.5",
   "author": "Microsoft Corporation",
   "description": "",
   "license": "MIT",
@@ -92,7 +92,7 @@
   "dependencies": {
     "@azure/identity": "^3.1.3",
     "@microsoft/teamsfx-api": "^0.22.1",
-    "@microsoft/teamsfx-core": "^1.23.4-rc-hotfix.0",
+    "@microsoft/teamsfx-core": "^1.23.4",
     "fs-extra": "^9.1.0",
     "underscore": "^1.12.1",
     "validator": "^13.7.0",
