--- a/templates/package.json
+++ b/templates/package.json
@@ -1,6 +1,6 @@
 {
     "name": "templates",
-    "version": "2.0.4-rc-hotfix.0",
+    "version": "2.0.4",
     "private": "true",
     "license": "MIT",
     "scripts": {
