--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -107,7 +107,7 @@ jobs:
       - name: version stable npm packages to npmjs.org
         if: ${{ github.event_name == 'workflow_dispatch' && (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/heads/hotfix/')) && github.event.inputs.preid == 'stable' }}
         run: |
-          npx lerna version --conventional-graduate --no-changelog --allow-branch ${GITHUB_REF#refs/*/} --yes
+          npx lerna version --conventional-commits --conventional-graduate --no-changelog --allow-branch ${GITHUB_REF#refs/*/} --yes
 
       - name: version change
         id: version-change
