--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@microsoft/teamsfx-api",
-  "version": "0.22.1",
+  "version": "0.22.2-rc.0",
   "description": "teamsfx framework api",
   "main": "build/index.js",
   "types": "build/index.d.ts",
@@ -31,6 +31,7 @@
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@microsoft/api-documenter": "^7.15.3",
     "@microsoft/api-extractor": "^7.18.4",
+    "@microsoft/eslint-plugin-teamsfx": "^0.0.2-rc.0",
     "@types/chai": "^4.2.14",
     "@types/chai-as-promised": "^7.1.3",
     "@types/chai-spies": "^1.0.3",
@@ -47,7 +48,6 @@
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-no-secrets": "^0.8.9",
     "eslint-plugin-prettier": "^4.0.0",
-    "@microsoft/eslint-plugin-teamsfx": "^0.0.1",
     "json-schema-to-typescript": "^10.1.4",
     "lint-staged": "^10.5.4",
     "mocha": "^9.2.0",
@@ -61,7 +61,7 @@
   },
   "dependencies": {
     "@azure/core-auth": "^1.4.0",
-    "@microsoft/teams-manifest": "^0.0.9",
+    "@microsoft/teams-manifest": "^0.0.10-rc.0",
     "axios": "^0.21.2",
     "chai": "^4.3.4",
     "jsonschema": "^1.4.0",
