--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@microsoft/teamsfx-cli",
-  "version": "2.0.0-alpha",
+  "version": "2.0.0-rc.0",
   "author": "Microsoft Corporation",
   "description": "",
   "license": "MIT",
@@ -43,7 +43,7 @@
   "aiKey": "1c56be97-bb74-42cf-b04b-8f1aabf04592",
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
-    "@microsoft/eslint-plugin-teamsfx": "^0.0.1",
+    "@microsoft/eslint-plugin-teamsfx": "^0.0.2-rc.0",
     "@microsoft/extra-shot-mocha": "0.0.2-alpha.4bafd4166.0",
     "@types/adm-zip": "^0.4.34",
     "@types/chai": "^4.2.14",
@@ -114,9 +114,9 @@
     "@azure/arm-subscriptions": "^5.0.0",
     "@azure/core-auth": "^1.4.0",
     "@azure/identity": "^3.1.3",
-    "@microsoft/metrics-ts": "0.0.3",
-    "@microsoft/teamsfx-api": "^0.22.1",
-    "@microsoft/teamsfx-core": "^2.0.0-alpha",
+    "@microsoft/metrics-ts": "^0.0.4-rc.0",
+    "@microsoft/teamsfx-api": "^0.22.2-rc.0",
+    "@microsoft/teamsfx-core": "^2.0.0-rc.0",
     "adm-zip": "^0.5.5",
     "applicationinsights": "^1.8.10",
     "async": "^2.6.4",
