--- a/packages/eslint-plugin-teamsfx/package.json
+++ b/packages/eslint-plugin-teamsfx/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@microsoft/eslint-plugin-teamsfx",
-  "version": "0.0.1",
+  "version": "0.0.2-rc.0",
   "description": "eslint for teamsfx",
   "private": true,
   "keywords": [
@@ -19,21 +19,21 @@
     "requireindex": "^1.2.0"
   },
   "devDependencies": {
-    "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-eslint-plugin": "^4.0.1",
-    "eslint-plugin-n": "^15.6.1",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^6.1.1",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
-    "lint-staged": "^13.2.1",
-    "eslint-config-prettier": "^8.3.0",
     "eslint": "^7.9.0",
-    "eslint-plugin-no-secrets": "^0.8.9",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-eslint-plugin": "^4.0.1",
     "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.6.1",
+    "eslint-plugin-no-secrets": "^0.8.9",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "prettier": "^2.4.1",
-    "mocha": "^9.1.3"
+    "eslint-plugin-promise": "^6.1.1",
+    "lint-staged": "^13.2.1",
+    "mocha": "^9.1.3",
+    "prettier": "^2.4.1"
   },
   "engines": {
     "node": "12.x || 14.x || >= 16"
