--- a/packages/metrics-ts/package.json
+++ b/packages/metrics-ts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@microsoft/metrics-ts",
-  "version": "0.0.3",
+  "version": "0.0.4-rc.0",
   "description": "Add metrics without intruding source code",
   "keywords": [
     "Metrics"
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
+    "@microsoft/eslint-plugin-teamsfx": "^0.0.2-rc.0",
     "@types/chai": "^4.2.21",
     "@types/mocha": "^8.2.3",
     "@types/node": "^16.0.0",
@@ -38,7 +39,6 @@
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-no-secrets": "^0.8.9",
     "eslint-plugin-prettier": "^4.0.0",
-    "@microsoft/eslint-plugin-teamsfx": "^0.0.1",
     "lint-staged": "^10.5.4",
     "mocha": "^9.2.1",
     "nyc": "^15.1.0",
