--- a/templates/package.json
+++ b/templates/package.json
@@ -1,6 +1,6 @@
 {
     "name": "templates",
-    "version": "2.0.4",
+    "version": "2.0.5-rc.0",
     "private": "true",
     "license": "MIT",
     "scripts": {
@@ -81,9 +81,9 @@
         "csharp/non-sso-tab"
     ],
     "devDependencies": {
+        "@microsoft/eslint-plugin-teamsfx": "^0.0.2-rc.0",
         "@typescript-eslint/eslint-plugin": "^4.19.0",
         "@typescript-eslint/parser": "^4.19.0",
-        "@microsoft/eslint-plugin-teamsfx": "^0.0.1",
         "eslint": "^7.22.0",
         "eslint-config-react-app": "^7.0.0",
         "eslint-plugin-import": "^2.25.2",
