test: update deps checker e2e test

--- a/.github/workflows/env-checker-ci-schedule.yml
+++ b/.github/workflows/env-checker-ci-schedule.yml
@@ -7,8 +7,8 @@ on:
   workflow_dispatch: # Manual trigger
 
 jobs:
-  build-and-test:
-    name: Build and Test OS "${{ matrix.os }}", Node.js "${{ matrix.node-version }}", Azure Functions Core Tools "${{ matrix.func-version }}", .NET SDK "${{ matrix.dotnet-version }}"
+  func:
+    name: Build and Test OS "${{ matrix.os }}", Node.js "${{ matrix.node-version }}", Azure Functions Core Tools "${{ matrix.func-version }}"
 
     strategy:
       ## Only test basic cases on PR trigger, because the `cb() never called` issue happens too often, blocking our PRs.
@@ -18,10 +18,129 @@ jobs:
       ## Details about this issue: https://github.com/npm/cli/wiki/%22cb()-never-called%3F--I'm-having-the-same-problem!%22
       ### tl;dr: This error is not one thing, but a category of errors. It means "something broke and we didn't have a way to catch it". We will always need a lot of detail to reproduce an error like this, or we cannot ever fix it. Every instance is unique, and your cb() never called is nothing like any other.
       # macos-latest is 10.15. We need to test 11 as well.
+      matrix:
+        os: [windows-latest, macos-latest, macos-11, ubuntu-latest]
+        node-version: [14, 16, 18]
+        func-version: [none, "3", "4", "~4.0.4670"]
+      max-parallel: 30
+
+    runs-on: ${{ matrix.os }}
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
+      # Use node 14 to setup project
+      - name: Setup Node.js
+        uses: actions/setup-node@v2.1.2
+        with:
+          node-version: 14
+
+      # https://github.com/marketplace/actions/retry-step
+      - name: Setup project with Retry
+        uses: nick-invision/retry@v2
+        with:
+          timeout_minutes: 15
+          max_attempts: 3
+          retry_wait_seconds: 10
+          on_retry_command: git clean -fXd .
+          command: |
+            npx lerna exec -- rm -rf node_modules
+            npm run setup --legacy-peer-deps
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v2.1.2
+        with:
+          node-version: ${{ matrix.node-version }}
+    
+      - name: Setup Azure Functions Core Tools For Linux
+        if: ${{ runner.os == 'Linux' && matrix.func-version != 'none' }}
+        run: |
+          sudo npm install --unsafe-perm -g azure-functions-core-tools@${{ matrix.func-version }}
+
+      - name: Setup Azure Functions Core Tools For Windows and macOS
+        if: ${{ runner.os != 'Linux' && matrix.func-version != 'none' }}
+        run: |
+          npm install -g azure-functions-core-tools@${{ matrix.func-version }}
+
+      ## In headless Linux CI machines xvfb is required to run VS Code
+      ## https://code.visualstudio.com/api/working-with-extensions/continuous-integration#github-actions
+      - name: Integration Test with xvfb
+        working-directory: ./packages/fx-core
+        if: runner.os == 'Linux'
+        run: |
+          xvfb-run -a npm run test:func-checker
+
+      - name: Integration Test
+        working-directory: ./packages/fx-core
+        if: runner.os != 'Linux'
+        run: |
+          npm run test:func-checker
+
+  node:
+    name: Build and Test OS "${{ matrix.os }}", Node.js "${{ matrix.node-version }}"
+
+    strategy:
       matrix: # TODO: add more versions and cases where Node.js do not exist
         os: [windows-latest, macos-latest, macos-11, ubuntu-latest]
-        node-version: [12, 14, 16]
-        func-version: [none, 2, 3]
+        node-version: [14, 16, 18]
+      max-parallel: 30
+
+    runs-on: ${{ matrix.os }}
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
+      # Use node 14 to setup project
+      - name: Setup Node.js
+        uses: actions/setup-node@v2.1.2
+        with:
+          node-version: 14
+
+      # https://github.com/marketplace/actions/retry-step
+      - name: Setup project with Retry
+        uses: nick-invision/retry@v2
+        with:
+          timeout_minutes: 15
+          max_attempts: 3
+          retry_wait_seconds: 10
+          on_retry_command: git clean -fXd .
+          command: |
+            npx lerna exec -- rm -rf node_modules
+            npm run setup --legacy-peer-deps
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v2.1.2
+        with:
+          node-version: ${{ matrix.node-version }}
+
+
+      ## In headless Linux CI machines xvfb is required to run VS Code
+      ## https://code.visualstudio.com/api/working-with-extensions/continuous-integration#github-actions
+      - name: Integration Test with xvfb
+        working-directory: ./packages/fx-core
+        if: runner.os == 'Linux'
+        run: |
+          xvfb-run -a npm run test:node-checker
+
+      - name: Integration Test
+        working-directory: ./packages/fx-core
+        if: runner.os != 'Linux'
+        run: |
+          npm run test:node-checker
+
+
+  dotnet:
+    name: Build and Test OS "${{ matrix.os }}", .NET SDK "${{ matrix.dotnet-version }}"
+
+    strategy:
+      matrix:
+        os: [windows-latest, macos-latest, macos-11, ubuntu-latest]
         dotnet-version: [none, 3.1.x, 5.0.x, 6.0.x]
       max-parallel: 30
 
@@ -43,26 +162,17 @@ jobs:
         run: |
           ./.github/env-checker/uninstall-dotnet.sh
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v2.1.2
-        with:
-          node-version: ${{ matrix.node-version }}
-
-      - name: Setup Azure Functions Core Tools For Linux
-        if: ${{ runner.os == 'Linux' && matrix.func-version != 'none' }}
-        run: |
-          sudo npm install --unsafe-perm -g azure-functions-core-tools@${{ matrix.func-version }}
-
-      - name: Setup Azure Functions Core Tools For Windows and macOS
-        if: ${{ runner.os != 'Linux' && matrix.func-version != 'none' }}
-        run: |
-          npm install -g azure-functions-core-tools@${{ matrix.func-version }}
-
       - name: Setup .NET SDK
         if: ${{ matrix.dotnet-version != 'none' }}
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: ${{ matrix.dotnet-version }}
+
+      # Use node 14 to setup project
+      - name: Setup Node.js
+        uses: actions/setup-node@v2.1.2
+        with:
+          node-version: 14
 
       # https://github.com/marketplace/actions/retry-step
       - name: Setup project with Retry
@@ -83,10 +193,11 @@ jobs:
         working-directory: ./packages/fx-core
         if: runner.os == 'Linux'
         run: |
-          xvfb-run -a npm run test:env-checker
+          xvfb-run -a npm run test:dotnet-checker
 
       - name: Integration Test
         working-directory: ./packages/fx-core
         if: runner.os != 'Linux'
         run: |
-          npm run test:env-checker
+          npm run test:dotnet-checker
+
