fix: add changes in package.json

--- a/packages/fx-core/package.json
+++ b/packages/fx-core/package.json
@@ -28,6 +28,9 @@
     "test:apiconnector": "nyc mocha \"tests/component/feature/apiconnector/**/*.test.ts\"",
     "test:unit": "nyc mocha \"tests/**/*.test.ts\" ",
     "test:env-checker": "npx mocha \"tests/common/deps-checker/**/*.it.ts\"",
+    "test:func-checker": "npx mocha \"tests/common/deps-checker/**/funcTool.it.ts\"",
+    "test:node-checker": "npx mocha \"tests/common/deps-checker/**/node.it.ts\"",
+    "test:dotnet-checker": "npx mocha \"tests/common/deps-checker/**/dotnet.it.ts\"",
     "test:component": "nyc mocha \"tests/component/**/*.test.ts\"",
     "test:configManager": "nyc mocha \"tests/component/configManager/*.test.ts\"",
     "test:botService": "nyc mocha \"tests/component/resource/botService/**/*.test.ts\"",
