build: set vsc as private to skip publish npm registry

--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -5,6 +5,7 @@
   "version": "5.0.0-alpha",
   "publisher": "TeamsDevApp",
   "author": "Microsoft Corporation",
+  "private": true,
   "icon": "media/teams.png",
   "main": "./out/src/extension.js",
   "repository": {
