--- a/packages/metrics-ts/package.json
+++ b/packages/metrics-ts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@microsoft/metrics-ts",
-  "version": "0.0.4-rc.0",
+  "version": "0.0.4",
   "description": "Add metrics without intruding source code",
   "keywords": [
     "Metrics"
@@ -27,7 +27,7 @@
   },
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
-    "@microsoft/eslint-plugin-teamsfx": "^0.0.2-rc.0",
+    "@microsoft/eslint-plugin-teamsfx": "^0.0.2",
     "@types/chai": "^4.2.21",
     "@types/mocha": "^8.2.3",
     "@types/node": "^16.0.0",
