--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@microsoft/teamsfx-api",
-  "version": "0.22.2-rc.0",
+  "version": "0.22.2",
   "description": "teamsfx framework api",
   "main": "build/index.js",
   "types": "build/index.d.ts",
@@ -31,7 +31,7 @@
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@microsoft/api-documenter": "^7.15.3",
     "@microsoft/api-extractor": "^7.18.4",
-    "@microsoft/eslint-plugin-teamsfx": "^0.0.2-rc.0",
+    "@microsoft/eslint-plugin-teamsfx": "^0.0.2",
     "@types/chai": "^4.2.14",
     "@types/chai-as-promised": "^7.1.3",
     "@types/chai-spies": "^1.0.3",
@@ -61,7 +61,7 @@
   },
   "dependencies": {
     "@azure/core-auth": "^1.4.0",
-    "@microsoft/teams-manifest": "^0.0.10-rc.0",
+    "@microsoft/teams-manifest": "^0.0.10",
     "axios": "^0.21.2",
     "chai": "^4.3.4",
     "jsonschema": "^1.4.0",
