--- a/packages/fx-core/package.json
+++ b/packages/fx-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@microsoft/teamsfx-core",
-  "version": "2.0.0-rc.3",
+  "version": "2.0.0",
   "main": "build/index.js",
   "types": "build/index.d.ts",
   "license": "MIT",
@@ -79,7 +79,7 @@
     "@azure/storage-blob": "^12.7.0",
     "@dbpiper/timer": "1.0.0-beta.2",
     "@feathersjs/hooks": "^0.6.5",
-    "@microsoft/teamsfx-api": "^0.22.2-rc.0",
+    "@microsoft/teamsfx-api": "^0.22.2",
     "@npmcli/arborist": "^4.2.0",
     "@types/proper-lockfile": "^4.1.1",
     "adm-zip": "^0.5.5",
@@ -136,7 +136,7 @@
   "devDependencies": {
     "@azure/storage-blob": "^12.5.0",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
-    "@microsoft/eslint-plugin-teamsfx": "^0.0.2-rc.0",
+    "@microsoft/eslint-plugin-teamsfx": "^0.0.2",
     "@types/adm-zip": "^0.4.33",
     "@types/chai": "^4.2.14",
     "@types/chai-as-promised": "^7.1.3",
