--- a/templates/package.json
+++ b/templates/package.json
@@ -1,6 +1,6 @@
 {
     "name": "templates",
-    "version": "3.0.0-rc.2",
+    "version": "3.0.0",
     "private": "true",
     "license": "MIT",
     "scripts": {
@@ -81,7 +81,7 @@
         "csharp/non-sso-tab"
     ],
     "devDependencies": {
-        "@microsoft/eslint-plugin-teamsfx": "^0.0.2-rc.0",
+        "@microsoft/eslint-plugin-teamsfx": "^0.0.2",
         "@typescript-eslint/eslint-plugin": "^4.19.0",
         "@typescript-eslint/parser": "^4.19.0",
         "eslint": "^7.22.0",
