fix: update CLI version and node version for CI/CD pipe line

--- a/packages/vscode-extension/.vscode/launch.json
+++ b/packages/vscode-extension/.vscode/launch.json
@@ -16,7 +16,9 @@
         "${workspaceFolder}/../api/build/**/*.js"
       ],
       "env": {
-        "NODE_ENV": "development"
+        "NODE_ENV": "development",
+        "TEAMSFX_V3": "true",
+        "TEAMSFX_DEBUG_TEMPLATE": "true"
       },
       "preLaunchTask": "npm: build"
     },
