refactor(vsc): remove unused codes and format imports

--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -118,11 +118,6 @@
         "enablement": "fx-extension.initialized"
       },
       {
-        "view": "teamsfx-empty-project-and-check-upgrade",
-        "contents": "%teamstoolkit.viewsWelcome.teamsfx-empty-project-and-check-upgrade.content%",
-        "enablement": "fx-extension.initialized"
-      },
-      {
         "view": "teamsfx-project-and-check-upgradeV3",
         "contents": "%teamstoolkit.viewsWelcome.teamsfx-project-and-check-upgradeV3.content%",
         "enablement": "fx-extension.initialized"
@@ -186,17 +181,12 @@
         {
           "id": "teamsfx-empty-project",
           "name": "Teams Toolkit",
-          "when": "!fx-extension.isTeamsFx && !fx-extension.canUpgradeToArmAndMultiEnv && !fx-extension.isNewUser"
-        },
-        {
-          "id": "teamsfx-empty-project-and-check-upgrade",
-          "name": "Teams Toolkit",
-          "when": "!fx-extension.isTeamsFx && fx-extension.canUpgradeToArmAndMultiEnv && isWorkspaceTrusted"
+          "when": "!fx-extension.isTeamsFx && !fx-extension.isNewUser"
         },
         {
           "id": "teamsfx-empty-project-new-user",
           "name": "Teams Toolkit",
-          "when": "!fx-extension.isTeamsFx && !fx-extension.canUpgradeToArmAndMultiEnv && fx-extension.isNewUser"
+          "when": "!fx-extension.isTeamsFx && fx-extension.isNewUser"
         }
       ]
     },
@@ -280,11 +270,6 @@
           "command": "fx-extension.azureAccountSettings",
           "when": "view == teamsfx-accounts && viewItem == signedinAzure",
           "group": "inline@2"
-        },
-        {
-          "command": "fx-extension.specifySubscription",
-          "when": "view == teamsfx-accounts && viewItem == selectSubscription",
-          "group": "inline"
         },
         {
           "command": "fx-extension.openDocumentLink",
@@ -488,12 +473,8 @@
           "when": "false"
         },
         {
-          "command": "fx-extension.specifySubscription",
-          "when": "false"
-        },
-        {
           "command": "fx-extension.checkProjectUpgrade",
-          "when": "fx-extension.canUpgradeToArmAndMultiEnv || fx-extension.canUpgradeV3"
+          "when": "fx-extension.canUpgradeV3"
         },
         {
           "command": "fx-extension.openSurvey",
@@ -565,12 +546,6 @@
         "title": "%teamstoolkit.commands.createEnvironment.title%",
         "icon": "$(add)",
         "enablement": "fx-extension.isTeamsFx && isWorkspaceTrusted && !fx-extension.commandLocked"
-      },
-      {
-        "command": "fx-extension.addFeature",
-        "title": "%teamstoolkit.commands.addFeature.title%",
-        "enablement": "fx-extension.isTeamsFx && isWorkspaceTrusted && !fx-extension.isV3Enabled && !fx-extension.commandLocked",
-        "category": "Teams"
       },
       {
         "command": "fx-extension.build",
@@ -792,11 +767,6 @@
         "command": "fx-extension.signOut",
         "title": "%teamstoolkit.commands.signOut.title%",
         "icon": "$(sign-out)"
-      },
-      {
-        "command": "fx-extension.specifySubscription",
-        "title": "%teamstoolkit.commands.specifySubscription.title%",
-        "icon": "$(list-selection)"
       },
       {
         "command": "fx-extension.openSurvey",
